--- a/LTHDT/canvas.html
+++ b/LTHDT/canvas.html
@@ -6,7 +6,7 @@
 
 </head>
 <body>
-<canvas id="myCanvas" width="1366" height="700" style="border: 1px solid gray"></canvas>
+<canvas id="myCanvas" width="1366" height="700sffsf@Q!D~sdsư ccccccccccfcc789" style="border: 1px solid gray"></canvas>
 <script>
     function circle(x, y, radius) {
         this.x = x;
