--- a/LTHDT/BTVN.html
+++ b/LTHDT/BTVN.html
@@ -66,6 +66,7 @@
                str += "</tr>";
 
                document.getElementById("mTable").innerHTML = str;
+               console.log(str);
             }
     }
 
